Bug 157965 - Printing / PDF export: page size / formula position is wrong
Summary: Printing / PDF export: page size / formula position is wrong
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.2.0
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2023-10-29 09:50 UTC by Mike Kaganski
Modified: 2024-02-13 17:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-10-29 09:50:58 UTC
Before commit 9e92a17cb6e03beedeeca40bfc8524c2623d31eb, printing from Math used a standard paper size - e.g., Letter (visible in the Print dialog); the formula was positioned in the middle of the paper. After the said commit, it now uses some smaller custom format, like 122 mm x 158 mm, and the formula is misplaced (positioned in the right bottom part, and cut off partially).

This also affects PDF export from Math.
Comment 1 V Stuart Foote 2023-10-29 14:33:32 UTC
document size and misplacement of formula elements with print/PDF export confirmed, not just the formula text but also the Title and Borders affected. 

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b14583ba37a6d7ce398ccd3cf339f954785b03d8
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 2 Commit Notification 2023-10-29 19:27:19 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/798d21e2a1b8bc48b6bb5e1b3cf0cba0e5882a59

tdf#157965: UNO methods are expected to return sizes in mm/100

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.