tdf#157965: UNO methods are expected to return sizes in mm/100

Commit 9e92a17cb6e03beedeeca40bfc8524c2623d31eb made sm to always
use twips; before, it used mm/100 except in LOK. That change broke
the size values returned from XRenderable::getRenderer: instead of
mm/100, the resulting values were in twips, but handled as mm/100.

Set the printer's map mode to use mm/100s explicitly. Also use
mm/100s in the call to SvxPaperInfo::GetDefaultPaperSize.

Change-Id: Id7cf40d4bc19c92dc54ca03d81f25ba1f6bf25b9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158622
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>